--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
 
-name: OpenWrt-CI_Test_03
+name: OpenWrt-CI_Test_32
 
 on:
   push:
@@ -17,6 +17,9 @@ on:
   #   - cron: 0 20 * * *
   # release:
   #   types: [published]
+
+env:
+  SSH_ACTIONS: true
 
 jobs:
 
